--- a/loventure/package.json
+++ b/loventure/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@nodelib/fs.scandir": "^4.0.1",
     "bcrypt": "^5.1.1",
+    "dayjs": "^1.11.13",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
     "next": "15.2.4",
