--- a/loventure/package.json
+++ b/loventure/package.json
@@ -12,11 +12,13 @@
     "@nodelib/fs.scandir": "^4.0.1",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.13",
+    "framer-motion": "^12.6.3",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.13.1",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
     "react": "^19.0.0",
+    "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
     "zod": "^3.24.2"
   },
