--- a/loventure/package.json
+++ b/loventure/package.json
@@ -9,11 +9,13 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^2.2.1",
     "@nodelib/fs.scandir": "^4.0.1",
     "bcrypt": "^5.1.1",
     "dayjs": "^1.11.13",
     "framer-motion": "^12.6.3",
     "jsonwebtoken": "^9.0.2",
+    "lucide-react": "^0.487.0",
     "mongoose": "^8.13.1",
     "next": "15.2.4",
     "next-auth": "^4.24.11",
