--- a/loventure/package.json
+++ b/loventure/package.json
@@ -22,6 +22,7 @@
     "react": "^19.0.0",
     "react-calendar": "^5.1.0",
     "react-dom": "^19.0.0",
+    "swr": "^2.3.3",
     "zod": "^3.24.2"
   },
   "devDependencies": {
